(feat) add header and footer layouts to App

--- a/app/public/assets/stylesheet.css
+++ b/app/public/assets/stylesheet.css
@@ -65,11 +65,60 @@ table {
 
 /*
   ========================================
+  Custom CSS
+  ========================================
+*/
+
+body {
+  font-family: Courier, serif;
+}
+
+.app {
+  width: 100%;
+}
+
+/*
+  ========================================
+  Custom Header
+  ========================================
+*/
+
+.header {
+  align-items: center;
+  background-color: #333;
+  display: flex;
+  flex-flow: row nowrap;
+  height: 3em;
+  justify-content: center;
+}
+
+.title {
+  color: white;
+  font-size: 3em; 
+}
+
+/*
+  ========================================
   Custom Body
   ========================================
 */
 
-#app {
-  font-family: Arial, sans-serif;
+/*
+  ========================================
+  Custom Footer
+  ========================================
+*/
+
+.footer {
+  align-items: center;
+  background-color: #333;
+  display: flex;
+  flex-flow: row nowrap;
+  height: 1em;
+  justify-content: flex-start;
 }
 
+.small-info {
+  color: white;
+  font-size: 0.75em; 
+}
