--- a/app/public/assets/stylesheet.css
+++ b/app/public/assets/stylesheet.css
@@ -101,8 +101,25 @@ body {
   ========================================
 */
 
-.main {
+.main-container {
+  display: flex;
+  flex-basis: 100%;
+  justify-content: space-around;
   height: 700px;
+}
+
+.board-wrapper {
+  display: flex;
+  flex-basis: 70%;
+}
+
+.create-grame-wrapper {
+  display: flex;
+  flex-basis: 30%;
+}
+
+.wrapper {
+  align-self: center;
 }
 
 /*
